seprate HLB.h to 2 files: hlb_api.h and inst_simulate.h

--- a/dev/CPP/CMakeLists.txt
+++ b/dev/CPP/CMakeLists.txt
@@ -3,4 +3,4 @@ project(HLB)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(HLB main.cpp HLB.h)
+add_executable(HLB main.cpp HLB.h hlb_api.h inst_simulate.h)
